--- a/app/views/payments/edit.html.erb
+++ b/app/views/payments/edit.html.erb
@@ -74,7 +74,7 @@
                   </td>
 
                   <td width="14%">
-                    <span>R$ <%= i.text_field :amount, :value => number_with_precision(i.object.amount), :class => 'inputPeq input' %></span>
+                    <span><%= i.text_field :amount, :value => number_with_precision(i.object.amount), :class => 'inputPeq input' %></span>
                   </td>
 
                   <td width="14%">
