--- a/app/views/receipts/new.html.erb
+++ b/app/views/receipts/new.html.erb
@@ -6,11 +6,11 @@
 
   <%= form_for(@release) do |r| %>
     <ul>
-      <li>
+	   <li class='codigo'>
         <label>
           <span>Codigo: </span>
-          <%= @object.code %>
-          <%= r.hidden_field :code, :value => @object.code %>
+          <%= hidden_field_tag :code, @object.code %>			
+		  <%= r.text_field :code, :value => @object.code || r.object.code, :class => "inputMedio input",:disabled => true %>
         </label>
       </li>
 
@@ -36,21 +36,20 @@
         </label>
       </li>
 
-      <li>
+      <li style='margin-top:25px'>
         <label>
           <%= r.check_box :first_paid %> <span>Primeira paga</span>
         </label>
-      </li>
 
-      <li>
+      <li style='display:table;'>
         <div id="guardaResultadoPesquisa" class="parcelas">
         </div>
       </li>
 
-      <li>
+      <li class='textAreaDescricao'>
         <label>
-          <span>Descricao</span><br/>
-          <%= @object.description %>
+          <span>Descricao:</span><br/>
+          <%= r.text_area :description, :class => 'textarea' %><br />
         </label>
       </li>
 
