--- a/app/views/registrations/choose_team.html.erb
+++ b/app/views/registrations/choose_team.html.erb
@@ -1,16 +1,7 @@
-<b>Informações do Aluno</b><hr/>
-Nome: <%= @inscricao.student.name %><br/>
-CPF: <%= @inscricao.student.cpf %><br/>
-RG: <%= @inscricao.student.cpf %><br/>
-Data de Nascimento: <%= @inscricao.student.cpf %><br/>
-Sexo: <%= @inscricao.student.cpf %><br/>
-Relação com Idoso: <%= @inscricao.student.cpf %><br/>
-
-Telefones: <%= @inscricao.student.cpf %><br/>
-Documentos Entregues: <%= @inscricao.student.cpf %><br/>
-
+<%= render "registrations/student", :student => @inscricao.student %><br/>
 <b>Informações da Turma</b><hr/>
-<%= form_for @inscricao do |i| %>
+<%= form_for @inscricao, :url => confirm_registration_path do |i| %>
+  <%= i.hidden_field :student_id, :value => i.object.student_id %>
   <ul>
     <li><span>Turma</span>
       <%= i.select :team_id, Team.all.map {|t| ["#{t.course.name} - #{t.name}" ,t.id]},{}, {:class => "inputGrande input"} %>
