--- a/app/views/registrations/show.html.erb
+++ b/app/views/registrations/show.html.erb
@@ -1,27 +1,3 @@
-<!-- TITLE -->
-<% content_for :title do %> <%= @course.name %> - Sistema Grupo Vida, Amor e Riso! <% end %>
-<!-- / TITLE -->
-<div class="cursos">
-	<h1>Curso: <%= @course.name %></h1>
-
-	<ul>
-		<li><p><strong>Tipo:</strong> <br/> <%= @course.categoria %></p></li>
-		<li><p><strong>Descrição do curso:</strong> <br/> <%= @course.description %></p></li>
-	</ul>
-
-	<div id="infoTurmasCursos">
-		<ul>
-			<li><p><span>0</span> Turmas</p></li>
-			<li><p><span>0</span> Em Andamento</p></li>
-			<li><p><span>0</span> Concluídas</p></li>
-			<li><p><span>0</span> Canceladas</p></li>
-			<!-- <li><p><span>0</span> Interessados</p></li> -->
-		</ul>
-	</div>
-
-	<ul>
-		<li><%= link_to "Criar turma", teams_new_path, :class => "btEnviarForm" %></li>
-		<li><%= link_to "Cancelar curso", courses_cancel_path, :class => "btEnviarForm" %></li>
-		<li><%= link_to "Voltar", courses_path, :class => "btEnviarForm" %></li>
-	</ul>
-</div>
+<%= render "registrations/student", :student => @inscricao.student %><br/>
+<%= render "registrations/team", :team => @inscricao.team %><br/>
+<%= render "registrations/instalments", :release => @inscricao.release %><br/>
