--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -11,7 +11,7 @@
                         <li><%= link_to "", courses_path, :id => "cursos", :title => "Cursos", :class => "cursos turmas alunos interessados inscricoes" %></li>
                         <li><%= link_to "", services_path, :id => "servicos", :class => 'servicos prestadores agenda-de-servicos clientes', :title => "Serviços"%></li>
                         <li><%= link_to "", assessoria_index_path, :id => "assessoria", :title => "Assessoria"%></li>
-                        <li><%= link_to "", financeiro_index_path, :id => "financeiro", :class => "financeiro", :title => "Financeiro"%></li>
+                        <li><%= link_to "", payments_path, :id => "financeiro", :class => "financeiro", :title => "Financeiro"%></li>
                     </ul>
                 </div>
 
