--- a/app/views/shared/_menu_financial.html.erb
+++ b/app/views/shared/_menu_financial.html.erb
@@ -1,2 +1,3 @@
-<%= link_to "Pagamentos", financeiro_index_path %> |
-<%= link_to "Recebimentos", receipts_path %> | Relatórios
+<%= link_to "Pagamentos", payments_path %> |
+<%= link_to "Recebimentos", receipts_path %> |
+<%= link_to "Relatórios", reports_path %>
