--- a/app/views/payments/index.html.erb
+++ b/app/views/payments/index.html.erb
@@ -6,7 +6,7 @@
   <h1>Pagamentos</h1>
 
   <div id="guardaPesquisa">
-    <%= form_for "filtro",:url => financeiro_index_path, :method => 'GET' do |f| %>
+    <%= form_for "filtro" do |f| %>
       <ul>
         <li class="escondidoPesquisaAvancada">
           <label for="campoCodigo">Código</label>
@@ -45,7 +45,7 @@
 		  <%= f.text_field :number, :class => "inputPeq input", :id => 'campoParcela' %>
 		  <label style='margin-left:10px;'>
 			Despesa fixa
-			<%= f.check_box :fixed_payment %> 
+			<%= f.check_box :fixed_payment %>
 		  </label>
         </li>
 
@@ -59,7 +59,7 @@
         </li>
       </ul>
     <% end %>
-  <%= link_to "Novo pagamento", novo_pagamento_path, class: "btEnviarForm" %>
+  <%= link_to "Novo pagamento", new_payment_path, class: "btEnviarForm" %>
 
   </div>
 
@@ -69,7 +69,7 @@
       <p>
         <span><strong><%= i.name %></strong><br/>
         <%= i.expiration_date_to_s %> - <%= number_to_currency(i.amount) %></span>
-        <%= link_to 'Visualizar', financeiro_editar_lancamento_path(i.release), :class => 'btVoltarForm' %>
+        <%= link_to 'Visualizar', edit_payment_path(i.release), :class => 'btVoltarForm' %>
       </p>
     <% end %>
   </div>
@@ -80,7 +80,7 @@
     e.preventDefault();
 
     $.ajax({
-      url:  "<%= financeiro_pagamentos_search_path %>",
+      url:  "<%= search_payments_path %>",
       type: "GET",
       data: {
         "filtro": {
