--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -53,6 +53,6 @@
       <%= i.status %>
     </p>
   <% end %>
-  <%= link_to 'Edit', edit_schedule_path(@schedule) %> |
-  <%= link_to 'Back', dashboard_path %>
+  <%= link_to 'Editar', edit_schedule_path(@schedule) %> |
+  <%= link_to 'Voltar', dashboard_path %>
 </div>
