Eliminando duplicacao de arquivos no financeiro

--- a/app/views/receipts/index.html.erb
+++ b/app/views/receipts/index.html.erb
@@ -80,7 +80,7 @@
     e.preventDefault();
 
     $.ajax({
-      url:  "<%= financeiro_recebimentos_search_path %>",
+      url:  "<%= search_receipts_path %>",
       type: "GET",
       data: {
         "filtro": {
